# akari-bot

./: .env.example  Cargo.toml  Dockerfile  flake.nix
src/: domain.rs  infra.rs  main.rs  usecase.rs
src/domain/: errors.rs  infra.rs  models.rs
src/infra/: akari_score_repository.rs  schema.rs  summary_publisher.rs  user_repository.rs
src/usecase/: date.rs
